# MyCareer

./: .gitignore  CMakeLists.txt  README.md  abstracteducation.cpp  age.cpp  educationregistry.h  genericjob.cpp  genericjob.h  health.cpp  health.h  ieducation.h  ijob.h  mainwindow.cpp  mainwindow.ui  money.cpp  nulleducation.cpp  nulljob.cpp
src/: CMakeLists.txt  abstracteducation.h  abstractjob.cpp  abstractjob.h  age.h  educationregistry.cpp  expenses.cpp  expenses.h  genericeducation.cpp  genericeducation.h  genericjob.cpp  genericjob.h  health.cpp  health.h  ieducation.h  ijob.h  jobregistry.cpp  jobregistry.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  money.h  nulleducation.cpp  nulleducation.h  nulljob.cpp  nulljob.h  player.cpp  player.h
